<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ui.auth.LoginActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/login_animation"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_fileName="login.json"
        app:lottie_loop="true" />

    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_animation" />

    <ImageView
        android:id="@+id/email_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/email_icon"
        android:src="@drawable/ic_baseline_alternate_email_24"
        app:layout_constraintStart_toStartOf="@+id/login_text"
        app:layout_constraintTop_toBottomOf="@+id/login_text" />

    <app.liusaprian.stori.customview.EmailEditText
        android:id="@+id/email_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawablePadding="12dp"
        android:layout_marginStart="8dp"
        android:hint="@string/email"
        app:layout_constraintBottom_toBottomOf="@+id/email_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/email_image"
        app:layout_constraintTop_toTopOf="@+id/email_image" />

    <ImageView
        android:id="@+id/password_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/password_icon"
        android:src="@drawable/ic_baseline_lock_24"
        app:layout_constraintStart_toStartOf="@+id/login_text"
        app:layout_constraintTop_toBottomOf="@+id/email_image" />

    <app.liusaprian.stori.customview.PasswordEditText
        android:id="@+id/pass_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:drawablePadding="12dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@+id/password_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/email_image"
        app:layout_constraintTop_toTopOf="@+id/password_image" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_blue"
        android:text="@string/login"
        android:padding="12dp"
        android:textAllCaps="false"
        android:contentDescription="@string/login_button"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/new_here_text"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/new_here_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_here"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_login" />

    <TextView
        android:id="@+id/register_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:contentDescription="@string/go_to_register_button"
        android:textColor="@color/purple_blue"
        android:layout_marginHorizontal="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline_login"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.52"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/purple_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>