<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.add.AddStoryActivity"
    android:padding="20dp">

    <ImageView
        android:id="@+id/preview_iv"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_place_holder" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/camera_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/camera"
        android:text="@string/camera"
        app:cornerRadius="12dp"
        android:padding="8dp"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@id/gallery_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preview_iv" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/gallery_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:text="@string/gallery"
        android:textAllCaps="false"
        app:cornerRadius="12dp"
        android:padding="8dp"
        android:contentDescription="@string/gallery"
        app:layout_constraintBottom_toBottomOf="@+id/camera_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/camera_btn"
        app:layout_constraintTop_toTopOf="@+id/camera_btn" />

    <EditText
        android:id="@+id/description_et"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="20dp"
        android:gravity="top"
        android:padding="8dp"
        android:background="@drawable/edit_text_box"
        android:hint="@string/write_description_for_this_image"
        app:layout_constraintBottom_toTopOf="@+id/add_story_btn"
        app:layout_constraintTop_toBottomOf="@+id/camera_btn"
        tools:layout_editor_absoluteX="20dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_story_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/add_story_button"
        android:text="@string/add_story"
        android:textAllCaps="false"
        app:cornerRadius="20dp"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/purple_blue"
        app:layout_constraintBottom_toBottomOf="@+id/description_et"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/description_et" />

</androidx.constraintlayout.widget.ConstraintLayout>